[package]
name = "cargo"
version = "0.1.0"
authors = ["denglitong <litongdeng@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
 # from crtates.io
clap = "2.33.0"
# from online repo
rand = {git = "https://github.com/rust-random/rand"}
#bar = { path = "../bar" } # from a path in the local fs